@@ -62,6 +62,10 @@ Security related changes:
   potentially resulting in degraded service or Denial of Service on the
   local system.  Reported by Chris Schanzle.
 
+  CVE-2021-33574: The mq_notify function has a potential use-after-free
+  issue when using a notification type of SIGEV_THREAD and a thread
+  attribute with a non-default affinity mask.
+
 The following bugs are resolved with this release:
 
   [The release manager will add the list generated by
